refactor: Replace .common.collect.ImmutableMap.of() by Map.of() if the returned type is immediately down-cast. Fixes #1353