@@ -55,17 +55,17 @@ public class TestActionExport extends MetaTest {
 
     context.put("name", "SO001");
     context.put("orderDate", LocalDate.now());
-    context.put("customer", ImmutableMap.of("name", "John Smith"));
+    context.put("customer", Map.of("name", "John Smith"));
 
     List<Object> items = new ArrayList<>();
     context.put("items", items);
 
     items.add(
-        ImmutableMap.of("product", ImmutableMap.of("name", "PC1"), "price", 250, "quantity", 1));
+        Map.of("product", ImmutableMap.of("name", "PC1"), "price", 250, "quantity", 1));
     items.add(
-        ImmutableMap.of("product", ImmutableMap.of("name", "PC2"), "price", 550, "quantity", 1));
+        Map.of("product", ImmutableMap.of("name", "PC2"), "price", 550, "quantity", 1));
     items.add(
-        ImmutableMap.of("product", ImmutableMap.of("name", "Laptop"), "price", 690, "quantity", 1));
+        Map.of("product", ImmutableMap.of("name", "Laptop"), "price", 690, "quantity", 1));
 
     return context;
   }
